<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="dev.hnatiuk.carscanner.presentation.pages.search.SearchFragmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/default_margin_large">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/bottom_navigation_search"
                android:textSize="26sp"
                android:textStyle="bold" />

            <dev.hnatiuk.carscanner.presentation.view.SearchCardView
                android:id="@+id/scanning_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:sc_description="@string/search_card_scanning_description"
                app:sc_icon="@drawable/ic_camera"
                app:sc_icon_background="@drawable/background_scanning_icon"
                app:sc_logo="@drawable/logo_scanning"
                app:sc_title="@string/search_card_scanning_title" />

            <dev.hnatiuk.carscanner.presentation.view.SearchCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:sc_description="@string/search_card_typing_title"
                app:sc_icon="@drawable/ic_typing"
                app:sc_icon_background="@drawable/background_typing_icon"
                app:sc_logo="@drawable/logo_typing"
                app:sc_title="@string/search_card_typing_description" />

        </LinearLayout>

    </ScrollView>

</layout>