<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dev.hnatiuk.carscanner.presentation.pages.welcome.WelcomeActivityViewModel" />

        <import type="dev.hnatiuk.carscanner.domain.entity.AuthProvider" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/auth_horizontal_margin"
        tools:context=".presentation.pages.welcome.WelcomeActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="80dp"
            android:layout_marginTop="72dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            style="@style/AppTheme.Text.Description"
            android:layout_marginTop="@dimen/default_margin_small"
            android:text="@string/welcome_title"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_in"
            style="@style/AppTheme.Button.Filled"
            android:layout_marginBottom="@dimen/default_margin_large"
            android:onClick="@{v -> viewModel.onSignInClick()}"
            android:text="@string/welcome_continue_with_email"
            app:layout_constraintBottom_toTopOf="@+id/social_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/social_divider"
            style="@style/AppTheme.Divider"
            android:layout_marginBottom="@dimen/default_margin_large"
            app:layout_constraintBottom_toTopOf="@id/facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <FrameLayout
            android:id="@+id/google"
            style="@style/AppTheme.SocialAuthButton"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:layout_marginBottom="@dimen/auth_vertical_margin_large"
            android:onClick="@{v -> viewModel.onSocialAuthClick(AuthProvider.GOOGLE)}"
            app:layout_constraintBottom_toTopOf="@id/skip_for_now"
            app:layout_constraintEnd_toStartOf="@+id/facebook"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_google"
                android:drawablePadding="@dimen/default_margin_small"
                android:text="@string/welcome_google"
                android:textColor="@color/text_hint" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/facebook"
            style="@style/AppTheme.SocialAuthButton"
            android:layout_marginStart="@dimen/default_margin_small"
            android:onClick="@{v -> viewModel.onSocialAuthClick(AuthProvider.FACEBOOK)}"
            app:layout_constraintBottom_toBottomOf="@id/google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/google">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_facebook"
                android:drawablePadding="@dimen/default_margin_small"
                android:text="@string/welcome_facebook"
                android:textColor="@color/text_hint" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skip_for_now"
            style="@style/AppTheme.TextButton.Bold"
            android:layout_marginTop="50dp"
            android:onClick="@{v -> viewModel.onSkipNowClick()}"
            android:text="@string/welcome_skip_for_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>